# Learned

./: .gitignore  README.md
angular2/egghead-getstarted/: README.md  angular-cli.json  package.json
angular2/udemy-getting-started-with-angular2/: README.md  angular-cli.json  package.json
aws/egghead-build-app-aws-cdk/: README.md  cdk.json  package-lock.json  package.json  template.yaml  tsconfig.json
cassandra/udemy-learn-apachecassandra-2hour/: README.md  note.md
clojure/udemy-clojure-complete-beginner-guide/: .gitignore  README.md
css/egghead-css-selectors-in-depth/: READMD.md
css/egghead-useful-scss/: README.md  index.html  package.json
css/lalacasts-css-grids-for-everyone/: 1.html  2.html  3.html  4.html  5.html  6.html  README.md
css/nomadcoders-css-masterclass/: README.md  flexbox.html  grid.html  index.html  package.json  styles.css  tasks.md
css/wesbos-cssgrid/: .gitignore  02 Starter Files and Tooling Setup.html  03 CSS Grid Fundamentals.html  04 CSS Grid Dev Tools.html  05 CSS Grid Implicit vs Explicit Tracks.html  06 CSS grid-auto-flow Explained.html  07 Sizing tracks in CSS Grid.html  08 CSS Grid repeat function.html  09 Sizing Grid Items.html  10 Placing Grid Items.html  11 Spanning and Placing Cardio.html  12 auto-fit and auto-fill.html  13 Using minmax() for Responsive Grids.html  15 Naming Lines in CSS Grid.html  16 grid-auto-flow dense Block Fitting.html  17 CSS Grid Alignment + Centering.html  18 Re-ordering Grid Items.html  19 Nesting Grid with Album Layouts.html  22 Recreating Codepen.html  22 style.css  23 Bootstrappy Grid with CSS Variables.html  25 Full Bleed Blog Layout.html  readme.md
css/wesbos-what-the-flexbox/: README.md
dart/egghead-getstarted-dart/: README.md  pubspec.yaml
dart/nomadcoders-start-dart/: 0-02.dart  1-01.dart  1-02.dart  1-03.dart  1-04.dart  1-05.dart  1-06.dart  2-00.dart  2-01.dart  2-02.dart  2-03.dart  2-04.dart  2-05.dart  3-00.dart  3-01.dart  3-03.dart  3-04.dart  3-05.dart  4-00.dart  4-01.dart  4-02.dart  4-03.dart  4-04.dart  4-05.dart  4-06.dart  4-07.dart  4-08.dart  4-09.dart  README.md
data/bjpublic-ai-100grade-python/: 04 MNIST 기초 이해.ipynb
data/bjpublic-python-data/: README.md
data/doit-pandas/: 02 판다스 시작하기.ipynb  03 판다스 데이터프레임과 시리즈.ipynb  04 그래프 그리기.ipynb  05 데이터 연결하기.ipynb  06 누락값 처리하기.ipynb  07 깔끔한 데이터.ipynb  08 판다스 자료형.ipynb  09 문자열 처리하기.ipynb  10 apply 메서드 활용.ipynb  11 그룹 연산.ipynb  12 시계열 데이터.ipynb  README.md
data/dsschool-deeplearning/: 01_01-single-layer-neural-network-for-regression.ipynb  01_02-boston-housing-dataset(assignment).ipynb  01_02-boston-housing-dataset(solution).ipynb  02_01-single-layer-neural-network-for-binary-classification(assignment).ipynb  02_02-single-layer-neural-network-for-multiclass-classification(assignment).ipynb  02_03-single-layer-neural-network-for-mnist-dataset(assignment).ipynb  03-01_multi-layer-neural-network-for-xor-problem(assignment).ipynb  03-02_multi-layer-neural-network-for-mnist-dataset(assignment).ipynb  04_01-keras-tutorial(assignment).ipynb  (+7 more)
devops/udemy-complete-handson-introduction-to-apacheairflow3/my-sdk/: README.md  pyproject.toml
devops/udemy-complete-handson-introduction-to-apacheairflow3/my-sdk/my_sdk/: __init__.py
devops/udemy-complete-handson-introduction-to-apacheairflow3/my-sdk/my_sdk/decorators/: sql.py
llm/book-ollama-opensourcellm-aiagent-develop-entry/ch05/04_rag_pdf/: main.py  pyproject.toml
llm/book-ollama-opensourcellm-aiagent-develop-entry/ch05/04_rag_pdf/faiss_index/: index.faiss  index.pkl
llm/book-ollama-opensourcellm-aiagent-develop-entry/ch07/01_agent_with_single_tool/: main.py  pyproject.toml
llm/book-ollama-opensourcellm-aiagent-develop-entry/ch08/01_basic_chatbot_graph/: main.py  pyproject.toml
llm/book-ollama-opensourcellm-aiagent-develop-entry/ch09/01_mcp_agent/: mcp_config.json  mcp_manager.py  mcp_prompt.py  pyproject.toml
llm/book-ollama-opensourcellm-aiagent-develop-entry/ch11/: .gitignore  main.py  pyproject.toml
llm/book-ollama-opensourcellm-aiagent-develop-entry/ch11/assets/: meeting_audio_sample_notes.md
llm/book-ollama-opensourcellm-aiagent-develop-entry/ch11/src/: __init__.py  file_handler.py  pipeline.py  summarizer.py  transcriber.py
llm/udemy-aiagents-workflows-practical-guide/04-third-party/research_crew/: README.md  pyproject.toml
llm/udemy-aiagents-workflows-practical-guide/04-third-party/research_crew/src/research_crew/: crew.py  main.py
llm/udemy-langgraph-develop-llmpowered-aiagents/agentic-rag/: pyproject.toml
llm/udemy-langgraph-develop-llmpowered-aiagents/agentic-rag/.chroma/: chroma.sqlite3
llm/udemy-langgraph-develop-llmpowered-aiagents/agentic-rag/graph/: ingestion.py
llm/udemy-langgraph-develop-llmpowered-aiagents/agentic-rag/graph/graph/chains/tests/: test_chains.py
llm/udemy-langgraph-develop-llmpowered-aiagents/agentic-rag/graph/nodes/: web_search.py
llm/udemy-langgraph-develop-llmpowered-aiagents/human-in-the-loop-memory/: async.py  main.py  pyproject.toml
llm/udemy-langgraph-develop-llmpowered-aiagents/reflection-agent/: chains.py  main.py  pyproject.toml
rust/jpub-rust-axum/axum-project/: Cargo.toml
rust/jpub-rust-axum/axum-project/src/: main.rs
rust/jpub-rust-axum/axum-project/src/routes/: get_routes.rs  header.rs  mod.rs  post_routes.rs  response.rs  status_code.rs  teams.rs  users.rs
rust/jpub-rust-axum/axum-project/src/state/: arc.rs  extension.rs  from_ref.rs  state.rs  token.rs
rust/jpub-rust-axum/proxy/: Cargo.toml
rust/jpub-rust-axum/proxy/src/: main.rs
rust/jpub-rust-axum/rest-api/: Cargo.toml  README.md
rust/jpub-rust-axum/rest-api/migration/: Cargo.toml
rust/jpub-rust-axum/rest-api/migration/src/: m20220101_000001_create_table.rs
rust/jpub-rust-axum/rest-api/src/: main.rs
rust/jpub-rust-axum/rest-api/src/api/: auth.rs  category.rs  mod.rs  product.rs  text.rs  users.rs
rust/jpub-rust-axum/rest-api/src/db/: init.rs  mod.rs
rust/jpub-rust-axum/rest-api/src/entities/: category.rs  mod.rs  prelude.rs  product.rs  users.rs
rust/jpub-rust-axum/rest-api/src/utils/: app_error.rs  hash.rs  jwt.rs  mod.rs
(+14403 files in other folders)
