[project]
name = "meeting-notes-pipeline"
version = "0.1.0"
description = "AI-powered meeting notes generation system"
readme = "README.md"
authors = [{name = "MakePlusCode", email = "makepluscode@gmail.com"}]
license = {text = "MIT"}
keywords = ["ai", "whisper", "meeting", "transcription", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.1.12",
    "langchain-community>=0.0.27", 
    "langchain-ollama>=0.0.1",
    "langgraph>=0.0.40",
    "faster-whisper>=1.0.0",
    "notion-client>=2.2.1",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0"
]
requires-python = ">=3.10"

[project.scripts]
meeting-notes = "main:main"

[project.optional-dependencies]
dev = [
    "black",
    "isort", 
    "mypy",
    "pytest"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true