[tool.poetry]
name = "human-in-the-loop-memory"
version = "0.1.0"
description = ""
authors = ["Eden Marco <emarco177@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.25"
langchain-openai = "^0.3.18"
langchain-tavily = "^0.2.0"
langgraph = "^0.4.7"
python-dotenv = "^1.1.0"
black = "^25.1.0"
isort = "^6.0.1"
httpx = "^0.28.1"
langgraph-checkpoint-sqlite = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"