[package]
name = "axum-project"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = { version = "0.7.4", features = ["json", "multipart"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"