[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["json", "tokio", "multipart"] }
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"