[package]
name = "rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.3", features = ["json", "macros"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["compression-gzip", "timeout", "trace"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sea-orm = { version = "1.1.2", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
dotenvy = "0.15.7"
