[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basic-chatbot-graph"
version = "0.1.0"
description = "기본 챗봇 예제"
requires-python = ">=3.10"
dependencies = [
    "langchain-core==0.3.61",
    "langchain-ollama==0.3.3",
    "langchain==0.3.25",
    "langchain-openai",
    "langgraph",
    "python-dotenv",
    "langchain-community",
    "typing-extensions"
]